# WebAI-to-API

./: .gitignore  Changelog.md  README.md  config.conf.example  pyproject.toml  requirements.txt  run.bat  run.sh
scripts/: debug_decrypt.py  dump_cookie_rows.py  list_edge_profiles.py  print_key.py  test_cookie_reader.py  test_streaming.py
src/: run.py
src/app/: config.py  logger.py  main.py  security.py
src/app/endpoints/: chat.py  gemini.py  google_generative.py  models.py
src/app/services/: gemini_client.py  session_manager.py
src/app/utils/: browser.py
src/models/: gemini.py
src/schemas/: request.py
