[project]
name = "webai-to-api"
version = "0.5.2"
description = "WebAI-to-API is a modular web server built with FastAPI, designed to manage requests across AI services."
authors = [
    { name = "Mohammad", email = "m.khani2810@gmail.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.7,<0.116.0",
    "browser-cookie3>=0.20.1,<0.21.0",
    "httpx>=0.28.1,<0.29.0",
    "curl-cffi>=0.7.4,<0.8.0",
    "gemini-webapi>=1.8.3",
    "uvicorn[standard]>=0.34.0,<0.35.0",
    "tomli>=2.2.1",
    "g4f>=0.5.5.6",
    "python-multipart>=0.0.20",
    "aiohttp-socks>=0.10.1",
    "nodriver>=0.46.1",
    "platformdirs>=4.3.8",
    "websocket-client>=1.8.0",
    "pywin32==308 ; sys_platform == 'win32'",
    "pycryptodomex==3.21.0 ; sys_platform == 'win32'"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/app", "src/models", "src/schemas"]

[tool.uv]
package = true
